@@ -4,7 +4,9 @@ share/gfeedline.desktop.in
 share/gfeedline.glade
 share/preferences.glade
 share/update.glade
+share/retweet.glade
 lib/menu.py
 lib/notification.py
 lib/plugins/twitter/api.py
 lib/plugins/twitter/assistant.py
+lib/plugins/twitter/tweetentry.py
